--- a/ProjectNo1/.project
+++ b/ProjectNo1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProjectNo1</name>
+	<name>PartTimeManager+</name>
 	<comment></comment>
 	<projects>
 	</projects>
